bad/assign_field_array_mcall_class.example_compiler_output
ERROR
[1mbad/assign_field_array_mcall_class.lat:12:20: [1;31merror: [0;1massigning to `int[]` from incompatible type `Y`[m
	(new M).foo().fld = new Y;
	                  [1;32m^[m
